Aggiunti dimensionamenti colonne

--- a/index.html
+++ b/index.html
@@ -4,30 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Framework</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/12bool.css">
 </head>
 
 <body>
-            <!-- INIZIO HEADER -->
-    <header>
 
-    </header>
-            <!-- FINE HEADER -->
-
-            <!-- INIZIO MAIN -->
-    <main>
-
-    </main>
-            <!-- FINE MAIN -->
-
-            <!-- INIZIO FOOTER -->
-    <footer>
-
-    </footer>
-            <!-- FINE FOOTER -->
-
+        
 </body>
 </html>
