--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
+        <div class="container">
+                <h1>ESERCIZIO FRAMEWORK</h1>
+                <div class="row">
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 col-blue">1 col</div>
+                </div>
+        </div>
 
-        
+
 </body>
 </html>
