--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                         <div class="col-5 col-blue">5 col</div>
                         <div class="col-5 col-blue">5 col</div>
                 </div>
+
+                <div class="row">
+                        <div class="col col-blue">12 col</div>
+                </div>
         </div>
 
 
