--- a/index.html
+++ b/index.html
@@ -15,28 +15,58 @@
         <div class="container">
                 <h1>ESERCIZIO FRAMEWORK</h1>
                 <div class="row">
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
-                        <div class="col-1 col-blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-1 blue">1 col</div>
                 </div>
 
                 <div class="row">
-                        <div class="col-2 col-blue">2 col</div>
-                        <div class="col-5 col-blue">5 col</div>
-                        <div class="col-5 col-blue">5 col</div>
+                        <div class="col-2 blue">2 col</div>
+                        <div class="col-5 blue">5 col</div>
+                        <div class="col-5 blue">5 col</div>
                 </div>
 
                 <div class="row">
-                        <div class="col col-blue">12 col</div>
+                        <div class="col blue">12 col</div>
+                </div>
+
+                <div class="row">
+                        <div class="col-8 blue">8 col</div>
+                        <div class="col-2 blue">2 col</div>
+                        <div class="col-2 blue">2 col</div>
+                </div>
+
+                <div class="row">
+                        <div class="col-1 blue">1 col</div>
+                        <div class="col-2 blue">2 col</div>
+                        <div class="col-2 blue">2 col</div>
+                        <div class="col-6 blue">6 col</div>
+                        <div class="col-1 blue">1 col</div>
+                </div>
+
+                <div class="row">
+                        <div class="col-6 blue">
+                                <div class="row">
+                                        <div class="nested-col-2 green">2 col</div>
+                                        <div class="nested-col-2 green">2 col</div>
+                                        <div class="nested-col-8 green">8 col</div>
+                                </div>
+                        </div>
+                        <div class="col-6 blue">
+                                <div class="row">
+                                        <div class="nested-col-6 green">6 col</div>
+                                        <div class="nested-col-6 green">6 col</div>
+                                </div>
+                        </div>
                 </div>
         </div>
 
