--- a/index.html
+++ b/index.html
@@ -76,6 +76,36 @@
                         <div class="row">
                                 <div class="col blue"></div>
                         </div>
+
+                        <div class="row">
+                                <div class="col-1 blue"></div>
+                                <div class="col-11 blue"></div>
+                        </div>
+
+                        <div class="row">
+                                <div class="col-2 blue"></div>
+                                <div class="col-10 blue"></div>
+                        </div>
+
+                        <div class="row">
+                                <div class="col-3 blue"></div>
+                                <div class="col-9 blue"></div>
+                        </div>
+
+                        <div class="row">
+                                <div class="col-4 blue"></div>
+                                <div class="col-8 blue"></div>
+                        </div>
+
+                        <div class="row">
+                                <div class="col-5 blue"></div>
+                                <div class="col-7 blue"></div>
+                        </div>
+
+                        <div class="row">
+                                <div class="col-6 blue"></div>
+                                <div class="col-6 blue"></div>
+                        </div>
                 </section>
         </div>
 
