--- a/index.html
+++ b/index.html
@@ -107,6 +107,73 @@
                                 <div class="col-6 blue"></div>
                         </div>
                 </section>
+
+                <section>
+                        <h2>OFFSET</h2>
+
+                        <div class="row row-reverse">
+                                <div class="col-1 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-2 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-3 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-4 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-5 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-6 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-7 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-8 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-9 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-10 blue"></div>
+                        </div>
+
+                        <div class="row row-reverse">
+                                <div class="col-11 blue"></div>
+                        </div>
+                </section>
+
+                <section>
+                        <h1>NESTED</h1>
+                        <div class="row">
+                                <div class="col-7 blue">
+                                        <div class="row">
+                                                <div class="nested-col-2 green"></div>
+                                                <div class="nested-col-8 green"></div>
+                                                <div class="nested-col-2 green"></div>
+                                        </div>
+                                </div>
+                                <div class="col-5 blue">
+                                        <div class="row">
+                                                <div class="nested-col-6 green"></div>
+                                                <div class="nested-col-6 green"></div>
+                                        </div>
+                                </div>
+                        </div>
+                </section>
         </div>
 
 
