--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </section>
 
                 <section>
-                        <h1>NESTED</h1>
+                        <h2>NESTED</h2>
                         <div class="row">
                                 <div class="col-7 blue">
                                         <div class="row">
@@ -170,6 +170,56 @@
                                         <div class="row">
                                                 <div class="nested-col-6 green"></div>
                                                 <div class="nested-col-6 green"></div>
+                                        </div>
+                                </div>
+                        </div>
+                </section>
+
+                <section>
+                        <h2>ALIGNMENT</h2>
+                        <div class="row justify-start">
+                                <div class="col-6 blue">start</div>
+                        </div>
+                        <div class="row justify-center">
+                                <div class="col-6 blue">center</div>
+                        </div>
+                        <div class="row justify-end">
+                                <div class="col-6 blue">end</div>
+                        </div>
+
+                        <div class="row align-top">
+                                <div class="col-6 blue high-col"></div>
+                                <div class="col-6 blue">top</div>
+                        </div>
+                        <div class="row align-center">
+                                <div class="col-6 blue high-col"></div>
+                                <div class="col-6 blue">middle</div>
+                        </div>
+                        <div class="row align-bottom">
+                                <div class="col-6 blue high-col"></div>
+                                <div class="col-6 blue">bottom</div>
+                        </div>
+                </section>
+
+                <section>
+                        <h2>JUSTIFY CONTENT</h2>
+                        <h5>SPACE AROUND</h5>
+                        <div class="row">
+                                <div class="col blue">
+                                        <div class="row justify-sp-around">
+                                                <div class="nested-col-2 green"></div>
+                                                <div class="nested-col-2 green"></div>
+                                                <div class="nested-col-2 green"></div>
+                                        </div>
+                                </div>
+                        </div>
+                        <h5>SPACE AROUND</h5>
+                        <div class="row">
+                                <div class="col blue">
+                                        <div class="row justify-sp-between">
+                                                <div class="nested-col-2 green"></div>
+                                                <div class="nested-col-2 green"></div>
+                                                <div class="nested-col-2 green"></div>
                                         </div>
                                 </div>
                         </div>
